--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-template-compiler": "^2.6.11"
   },
   "dependencies": {
+    "eslint": "^8.50.0",
     "lodash": "^4.17.20",
     "ol": "^6.3.1",
     "vue": "^2.6.11",
