--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,14 +6,14 @@
   "permissions": [
     "activeTab",
     "tabs",
-    "storage"
+    "storage",
+    "scripting"
   ],
   "background": {
-    "scripts": [
-      "background.js"
-    ]
+    "service_worker": "background.js",
+    "type": "module"
   },
-  "page_action": {
+  "action": {
     "default_popup": "popup.html",
     "default_icon": {
       "128": "icon128.png"
@@ -25,5 +25,5 @@
   "options_ui": {
     "page": "options.html"
   },
-  "manifest_version": 2
+  "manifest_version": 3
 }
